# htmail

./: .gitignore  Cargo.toml  index.html
docs/: README.md
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  mail.rs  main.rs
src/components/: body.rs  fields.rs  footer.rs  mod.rs  titlebar.rs
src/pages/: send.rs
src/plugins/: actions.rs  mod.rs  textarea.rs
src/tools/: body.rs  fetch.rs  html.rs  mod.rs  routes.rs
src/windows/: fieldpopups.rs  logger.rs  mod.rs
styles/: body.css  fields.css  footer.css  logger.css  main.css  titlebar.css  windows.css
styles/components/: body.css  fields.css  footer.css  titlebar.css
styles/plugins/: actions.css
styles/windows/: logger.css  windows.css
