[package]
name = "htmail-ui"
version = "0.1.0"
edition = "2021"
description = "Easily send mails with HTML content"
authors = ["Tom Webber <t.c.w.webber@gmail.com>"]
exclude = [".tests"]
license = "GPL-2.0"
readme = "docs/README.md"
repository = "https://github.com/t-webber/htmail"
keywords = ["email", "html", "mail", "send", "smtp"]
categories = ["email"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlDivElement"]}
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
chrono = "0.4"
yew_icons = {version = "0.8", features = [ "FeatherEdit3", "LucideView", "LucideX"]}
yew-router = "0.18"

[workspace]
members = [ "src-tauri"]

[package.metadata.scripts]
run = "cargo tauri dev"
check = "cargo tauri build"
build = "cargo tauri android dev"
release = "cargo tauri android build"