[package]
name = "htmail"
version = "0.1.0"
description = "Easily send mails with HTML content"
authors = ["Tom Webber <t.c.w.webber@gmail.com>"]
edition = "2021"
license = "GPL-2.0"
readme = "../docs/README.md"
repository = "https://github.com/t-webber/htmail"
keywords = ["email", "html", "mail", "send", "smtp"]
categories = ["email"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "htmail_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
lettre = "0.11"
